tests/custom/issues/365/stderr.expected
Error:
    365.essence:2:56:
unexpected >
expecting expression
    find i : int(0..9) such that forAll j : int(0..9) . j <> i
                                                           ^
